Reflected removal of several methods from corpus structure provider and change in node resolver (now returning URL)